# mimic

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LAUNCH_THREAD.md  MANIFEST.in  PRIVACY.md  README.md  SECURITY.md  build_executable.py  main.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
examples/: SKILL_EXAMPLE.md  actions_example.json
mimic/: __init__.py  main.py
skills/mimic_trigger/: SKILL.md
